fix: remove persistent scrollbars on edit dialog

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -53,8 +53,6 @@ dialog {
     0px 6px 18px 0px #25292e1f,
     0 1px 3px rgba(31, 35, 40, 0.12),
     0 8px 24px rgba(66, 74, 83, 0.12);
-
-  overflow: scroll;
 }
 
 h1 {
